<resources>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="toutdesc">   Tutankhamun (alternatively spelled with Tutenkh-, -amen, -amon) was an Egyptian pharaoh of the 18th dynasty (ruled c. 1332–1323 BC in the conventional chronology).\n\n   During the period of Egyptian history known as the New Kingdom or sometimes the New Empire Period. He has, since the discovery of his intact tomb, been referred to colloquially as King Tut.\n\n   His original name, Tutankhaten, means "Living Image of Aten", while Tutankhamun means "Living Image of Amun".\n\n   In hieroglyphs, the name Tutankhamun was typically written Amen-tut-ankh, because of a scribal custom that placed a divine name at the beginning of a phrase to show appropriate reverence. He is possibly also the Nibhurrereya of the Amarna letters, and likely the 18th dynasty king Rathotis who, according to Manetho, an ancient historian, had reigned for nine years—a figure that conforms with Flavius Josephus's version of Manetho's Epitome.</string>
    <string name="ramsisdesc">   Ramesses II(variously spelled also Rameses or Ramses; born c. 1303 BCE; died July or August 1213 BCE; reigned 1279–1213 BCE), also known as Ramesses the Great, was the third pharaoh of the 19th Dynasty of Egypt.\n\n He is often regarded as the greatest, most celebrated, and most powerful pharaoh of the Egyptian Empire. His successors and later Egyptians called him the "Great Ancestor".\n\n He is known as Ozymandias in the Greek sources, from a transliteration into Greek of a part of Ramesses throne name, Usermaatre Setepenre, "The justice of Rê is powerful—chosen of Rê".\n\n  Ramesses II led several military expeditions into the Levant, reasserting Egyptian control over Canaan. He also led expeditions to the south, into Nubia, commemorated in inscriptions at Beit el-Wali and Gerf Hussein. The early part of his reign was focused on building cities, temples, and monuments. He established the city of Pi-Ramesses in the Nile Delta as his new capital and used it as the main base for his campaigns in Syria.\n\n  At age fourteen, Ramesses was appointed Prince Regent by his father Seti I. He is believed to have taken the throne in his late teens and is known to have ruled Egypt from 1279 BCE to 1213 BCE. Manetho attributes Ramesses II a reign of 66 years and 2 months; most Egyptologists today believe he assumed the throne on May 31, 1279 BCE, based on his known accession date of III Shemu day 27. Estimates of his age at death vary; 90 or 91 is considered most likely.\n\n  Ramesses II celebrated an unprecedented 14 sed festivals (the first held after 30 years of a pharaoh's reign, and then, every three years) during his reign—more than any other pharaoh. On his death, he was buried in a tomb in the Valley of the Kings; his body was later moved to a royal cache where it was discovered in 1881, and is now on display in the Cairo Museum.</string>
    <string name="ikhnatoundesc">   Akhenaten (also spelled Echnaton, Akhenaton, Ikhnaton, and Khuenaten; meaning "Effective for Aten"), known before the fifth year of his reign as Amenhotep IV (sometimes given its Greek form, Amenophis IV, and meaning "Amun Is Satisfied"), was an ancient Egyptian pharaoh of the 18th Dynasty who ruled for 17 years and died perhaps in 1336 BC or 1334 BC.\n\n He is noted for abandoning traditional Egyptian polytheism and introducing worship centered on the Aten, which is sometimes described as monolatristic, henotheistic, or even quasi-monotheistic.\n\n  An early inscription likens the Aten to the sun as compared to stars, and later official language avoids calling the Aten a god, giving the solar deity a status above mere gods. Akhenaten tried to shift his culture from Egypts traditional religion, but the shifts were not widely accepted. After his death, his monuments were dismantled and hidden, his statues were destroyed, and his name excluded from the king lists.\n\n  Traditional religious practice was gradually restored, and when some dozen years later rulers without clear rights of succession from the 18th Dynasty founded a new dynasty, they discredited Akhenaten and his immediate successors, referring to Akhenaten himself as "the enemy" or "that criminal" in archival records. He was all but lost from history until the discovery during the 19th century of the site of Akhetaten, the city he built and designed for the worship of Aten, at Amarna.\n  Early excavations at Amarna by Flinders Petrie sparked interest in the enigmatic pharaoh, and a mummy found in the tomb KV55, which was unearthed in 1907 in a dig led by Edward R. Ayrton, is likely that of Akhenaten. DNA analysis has determined that the man buried in KV55 is the father of King Tutankhamun,[15] but its identification as Akhenaten has been questioned. Modern interest in Akhenaten and his queen Nefertiti comes partly from his connection with Tutankhamun (even though Tutankhamun's mother was not Nefertiti, but a woman named by archaeologists The Younger Lady), partly from the unique style and high quality of the pictorial arts he patronized, and partly from ongoing interest in the religion he attempted to establish.</string>
    <string name="nefertitidesc">   Neferneferuaten Nefertiti (c. 1370 – c. 1330 BC) was an Egyptian queen and the Great Royal Wife (chief consort) of Akhenaten, an Egyptian Pharaoh.\n\n Nefertiti and her husband were known for a religious revolution, in which they worshiped one god only, Aten, or the sun disc. With her husband, she reigned at what was arguably the wealthiest period of Ancient Egyptian history. Some scholars believe that Nefertiti ruled briefly as Neferneferuaten after her husbands death and before the accession of Tutankhamun, although this identification is a matter of ongoing debate.\n\n  If Nefertiti did rule as Pharaoh, her reign was marked by the fall of Amarna and relocation of the capital back to the traditional city of Thebes. Nefertiti had many titles including Hereditary Princess (iryt-p`t); Great of Praises (wrt-hzwt); Lady of Grace (nbt-im3t), Sweet of Love (bnrt-mrwt); Lady of The Two Lands (nbt-t3wy); Main Kings Wife, his beloved (hmt-niswt-‘3t meryt.f); Great Kings Wife, his beloved (hmt-niswt-wrt meryt.f), Lady of all Women (hnwt-hmwt-nbwt); and Mistress of Upper and Lower Egypt (hnwt-Shm’w-mhw).\n\n She was made famous by her bust, now in Berlins Neues Museum, shown to the right. The bust is one of the most copied works of ancient Egypt. It was attributed to the sculptor Thutmose, and it was found in his workshop.\n\nThe bust is notable for exemplifying the understanding Ancient Egyptians had regarding realistic facial proportions.</string>
    <string name="sphincdesc">Sphinx, mythological creature with a lion’s body and a human head, an important image in Egyptian and Greek art and legend. The word sphinx was derived by Greek grammarians from the verb sphingein (“to bind” or “to squeeze”), but the etymology is not related to the legend and is dubious. Hesiod, the earliest Greek author to mention the creature, called it Phix\n\n  The winged sphinx of Boeotian Thebes, the most famous in legend, was said to have terrorized the people by demanding the answer to a riddle taught her by the Muses—What is it that has one voice and yet becomes four-footed and two-footed and three-footed?—and devouring a man each time the riddle was answered incorrectly. Eventually Oedipus gave the proper answer: man, who crawls on all fours in infancy, walks on two feet when grown, and leans on a staff in old age. The sphinx thereupon killed herself. From this tale apparently grew the legend that the sphinx was omniscient, and even today the wisdom of the sphinx is proverbial\n\n   The earliest and most famous example in art is the colossal recumbent Great Sphinx at Giza, Egypt, dating from the reign of King Khafre (4th king of 4th dynasty, c. 2575–c. 2465 bce). This is known to be a portrait statue of the king, and the sphinx continued as a royal portrait type through most of Egyptian history. Arabs, however, know the Great Sphinx of Giza by the name of Abū al-Hawl, or “Father of Terror.”\n\n   Through Egyptian influence the sphinx became known in Asia, but its meaning there is uncertain. The sphinx did not occur in Mesopotamia until about 1500 bce, when it was clearly imported from the Levant. In appearance the Asian sphinx differed from its Egyptian model most noticeably in the addition of wings to the leonine body, a feature that continued through its subsequent history in Asia and the Greek world. Another innovation was the female sphinx, which first began to appear in the 15th century bce. On seals, ivories, and metalwork the sphinx was portrayed sitting on its haunches, often with one paw raised, and was frequently paired with a lion, a griffin (part eagle and part lion), or another sphinx.</string>
    <string name="scanner">Scanner</string>
    <string name="start_scanning_when_app_opens">Start scanning when the app opens</string>
    <string name="delay_in_between_each_scan">Delay in between each scan</string>
    <string name="logging">Logging</string>
    <string name="enable_logging">Enable logging</string>
    <string name="logging_endpoint">Logging endpoint</string>
    <string name="device_name">Device name</string>
    <string name="logging_frequency">Logging frequency</string>
    <string name="logging_description">If you choose to enable the logging a POST http request will be made to the specified endpoint at the logging frequency. The data will be send as a JSON object in the body of the request. If provided, a device name will be included in the http headers so you know which device is sending the logs. Be aware this will drain the battery a lot. </string>
    <string name="prevent_sleep_while_scanning">Prevent device sleep while scanning</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="forget_password">Forgot password?</string>
</resources>