<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.tensorflow.demo.features.settings.SettingsActivity">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:visibility="invisible"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/toolbarColor"
        android:elevation="4dp"
        app:titleTextColor="@color/toolbarTextColor"
        app:theme="@style/Widget.MyApp.Toolbar.Solid"
        />

    <ScrollView
        android:visibility="invisible"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Scanner title-->
            <TextView
                android:text="@string/scanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorAccent"/>

            <!-- Scan on open toggle -->
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/scan_open"
                android:text="@string/start_scanning_when_app_opens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:background="@color/divider" />

            <!-- Scan delay -->
            <LinearLayout
                android:id="@+id/scan_delay_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground">

                <TextView
                    android:text="@string/delay_in_between_each_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/primaryText" />

                <TextView
                    android:id="@+id/scan_delay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/secondaryText"
                    tools:text="5 seconds"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:background="@color/divider" />

            <!-- "Prevent sleep" while scanning -->
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/prevent_sleep"
                android:text="@string/prevent_sleep_while_scanning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"/>

            <!-- Logging title-->
            <TextView
                android:text="@string/logging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/colorAccent"/>

            <!-- Logging toggle -->
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/logging_enabled"
                android:text="@string/enable_logging"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"/>

            <!-- Logging description -->
            <TextView
                android:id="@+id/logging_description"
                android:text="@string/logging_description"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/secondaryText" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:background="@color/divider" />

            <!-- Logging endpoint -->
            <LinearLayout
                android:id="@+id/logging_endpoint_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground">

                <TextView
                    android:id="@+id/logging_endpoint_title"
                    android:text="@string/logging_endpoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/primaryText" />

                <TextView
                    android:id="@+id/logging_endpoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/secondaryText"
                    tools:text="http://example.com/logging"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:background="@color/divider" />

            <!-- Device name -->
            <LinearLayout
                android:id="@+id/device_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground">

                <TextView
                    android:id="@+id/device_name_title"
                    android:text="@string/device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/primaryText" />

                <TextView
                    android:id="@+id/device_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/secondaryText"
                    tools:text="Red beacon"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:background="@color/divider" />

            <!-- Logging frequency -->
            <LinearLayout
                android:visibility="invisible"
                android:id="@+id/logging_frequency_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackground">

                <TextView
                    android:visibility="invisible"
                    android:id="@+id/logging_frequency_title"
                    android:text="@string/logging_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/primaryText" />

                <TextView
                    android:id="@+id/logging_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/secondaryText"
                    tools:text="Every scan"
                    />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>