<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33B5E5"
   >


    <ImageView
        android:id="@+id/signinImageView"
        android:layout_width="wrap_content"
        android:layout_height="700dp"
        android:layout_marginTop="50dp"
        android:layout_above="@+id/emailEditText"
        android:layout_alignEnd="@+id/emailEditText"
        android:layout_marginBottom="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        app:srcCompat="@drawable/samak_abyad_2" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <View
        android:id="@+id/UnderLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/passwordEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#FFFFFF"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailEditText"
        android:layout_alignStart="@+id/emailEditText"
        android:layout_below="@+id/emailEditText"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <View
        android:id="@+id/UnderLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="#FFFFFF" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/passwordEditText"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_alignStart="@+id/passwordEditText"
        android:layout_below="@+id/UnderLine2"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_backround"
        android:clickable="true"
        android:text="@string/login"
        android:textColor="#33B5E5" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/signinButton"
        android:layout_alignLeft="@+id/signinButton"
        android:layout_alignRight="@+id/signinButton"
        android:layout_alignStart="@+id/signinButton"
        android:layout_below="@+id/signinButton"
        android:layout_marginTop="13dp"
        android:background="@drawable/button_backround"
        android:clickable="true"
        android:text="@string/signup_button"
        android:textColor="#33B5E5" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:singleLine="false"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />


</RelativeLayout>
